# spark-plug

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.sbt  diesel.toml  docker-compose.yml  hello.py  pyproject.toml
.github/workflows/: server-build.yml  server-release.yml  server-test.yml
client/: pyproject.toml  test.py
clients/python/: pyproject.toml  test.py
clients/python/connect_proxy_client/: __init__.py
clients/python/spark_plug_client/: __init__.py
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
conf/: cert.pem  config.yaml  key.pem
dev/: Dockerfile-hadoop  Dockerfile-knox  Dockerfile-server  yarn-site.xml
dev/knox/: gateway-log4j2.xml  gateway-site.xml  knox-entrypoint.sh
dev/knox/topologies/: sandbox.xml
plugin/src/main/scala/org/apache/spark/sql/connect/proxy/: Config.scala  SparkConnectProxyInterceptor.scala  SparkConnectProxyListener.scala  SparkConnectProxyServer.scala
plugin/src/main/scala/org/apache/spark/sql/sparkplug/: Config.scala  SparkPlugInterceptor.scala  SparkPlugListener.scala  SparkPlugServer.scala
server/: Cargo.toml
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20220101_000001_create_table_application.rs  m20260217_000002_add_name_to_application.rs
server/migrations/2025-07-08-180908_create_applications/: down.sql  up.sql
server/src/: auth.rs  config.rs  error.rs  launcher.rs  lib.rs  main.rs  models.rs  proxy.rs  routes.rs  schema.rs  store.rs
server/src/entities/: application.rs  mod.rs
server/tests/: test_integration.rs
src/: launcher.rs  main.rs  routes.rs  store.rs
