[package]
name = "spark-connect-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
env_logger = "0.11"
figment = { version = "0.10", features = ["json", "yaml"] }
futures = "0.3"
futures-util = "0.3"
http = "1"
http-body-util = "0.1"
httparse = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
jsonwebtoken = "9"
jwks = "0.4"
local-ip-address = "0.6"
log = "0.4"
rustls = "0.23"
rustls-pemfile = "2"
rustls-pki-types = "1"
sea-orm = { version = "1", features = ["sqlx-all", "sqlite-use-returning-for-3_35", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "1.1.13", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-mysql", "sqlx-sqlite"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tower = "0.5"
tower-http = { version = "0.6", features = ["auth"] }
uuid = { version = "1", features = ["v4"] }
which = "7"
whoami = "1"

migration = { path = "./migration" }