[package]
name = "spark-connect-proxy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
env_logger = "0.11"
figment = { version = "0.10", features = ["env", "json", "yaml"] }
futures = "0.3"
futures-util = "0.3"
http = "1"
http-body-util = "0.1"
httparse = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
jsonwebtoken = "9"
jwks = "0.4"
local-ip-address = "0.6"
log = "0.4"
minijinja = "2.14"
reqwest = { version = "0.13", default-features = false, features = ["h2", "http2", "json"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
sea-orm = { version = "1", features = ["sqlx-all", "sqlite-use-returning-for-3_35", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "1.1.19", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-mysql", "sqlx-sqlite"] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["auth"] }
uuid = { version = "1", features = ["v4"] }
which = "8"
whoami = "2"

migration = { path = "./migration" }

[dev-dependencies]
axum-test = "18.6.0"
rcgen = "0.14"
spark-connect-proxy-client = { path = "../clients/rust" }

[features]
embed-plugin = []
