[package]
name = "spark-connect-proxy-client"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "=0.4.39"
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
spark-connect-rs = "0.0.2"
tokio = "1"
url = "2"
